--- a/css/styles.css
+++ b/css/styles.css
@@ -349,7 +349,7 @@
 
 
       #pop {
-        height: 600px;
+        height: 570px;
       }
 
       @media screen and (min-width: 30em){
@@ -359,7 +359,7 @@
       }
 
       #class {
-        height: 600px;
+        height: 570px;
       }
 
       @media screen and (min-width: 30em){
@@ -369,12 +369,12 @@
       }
 
       #talents {
-        height: 1400px;
+        height: 1350px;
       }
 
       @media screen and (min-width: 30em){
         #talents {
-          height: 1750px;
+          height: 1700px;
         }
       }
 
@@ -404,6 +404,7 @@
       p, .text1 {
         width: 95%;
         margin-bottom: 1em;
+        margin-left: 2.5%;
         font-family: "hyqihei50j";
         font-size: 0.9em;
         line-height: 150%;
