--- a/css/styles.css
+++ b/css/styles.css
@@ -307,13 +307,6 @@
         content: "\78"; /* Close icon */
       }
 
-      /*content*/
-
-      /*#cover {
-        width: 100%;
-        padding-top: 45px;
-      }*/
-
         .cover {
             content:url("../img/mobile_cover.jpg");
             width: 100%;
@@ -340,7 +333,6 @@
 
       section {
         float:left;
-        margin: 50px 5px 5px;
         height: 100%;
         width: 100%;
       /*  background-color: lightpink;
@@ -349,7 +341,7 @@
 
 
       #pop {
-        height: 570px;
+        height: 600px;
       }
 
       @media screen and (min-width: 30em){
@@ -359,7 +351,7 @@
       }
 
       #class {
-        height: 570px;
+        height: 650px;
       }
 
       @media screen and (min-width: 30em){
@@ -369,7 +361,7 @@
       }
 
       #talents {
-        height: 1350px;
+        height: 1480px;
       }
 
       @media screen and (min-width: 30em){
@@ -379,7 +371,7 @@
       }
 
       #elasticity {
-        height: 300px;
+        height: 380px;
       }
 
 /*      @media screen and (min-width: 30em){
@@ -387,10 +379,6 @@
           height: 400px;
         }
       }*/
-
-
-     
-
 
 
       h1 {
@@ -401,10 +389,11 @@
         font-size: 48px;
       }
 
-      p, .text1 {
+      p {
         width: 95%;
+        padding-left:2.5%;
+        padding-right:2.5%;
         margin-bottom: 1em;
-        margin-left: 2.5%;
         font-family: "hyqihei50j";
         font-size: 0.9em;
         line-height: 150%;
