--- a/css/styles.css
+++ b/css/styles.css
@@ -466,6 +466,18 @@
       }
             }
 
+      .chart3 {
+        width: 100%;
+        margin-left: 0;
+      }
+
+      @media screen and (min-width:30em){
+        .chart3 {
+          width: 50%;
+          margin-left: 25%
+        }
+      }
+
       .chart4 {
         width: 100%;
         margin-left: 0;
