--- a/css/styles.css
+++ b/css/styles.css
@@ -31,14 +31,16 @@
       }
 
       .container {
-        width: 100%;
+        width: 1280px;
+        margin-left: auto;
+        margin-right: auto;
       }
 
-      @media screen and (min-width: 190em){
+/*      @media screen and (min-width: 190em){
         .container {
           width: 70%;
         }
-      }
+      }*/
 
       body, div,
       h1, h2, h3, h4, h5, h6,
